# GreyML

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MANIFEST.in  README.md  demo_greyml.py  dtype_test.py  main.md  pyproject.toml  quick_test.py  setup.cfg  setup.py
.github/workflows/: ci.yml  workflow.yml
benchmarks/: bench_conv.c  bench_matmul.c  bench_vs_numpy.py  bench_vs_tensorflow.py
docs/: api_reference.md  architecture.md  contributing.md  tutorial.md  windows_setup.md
examples/c/: mnist_mlp.c  xor.c
examples/python/: 00_quickstart.py  01_tensor_basics.py  02_autograd_intro.py  03_linear_regression.py  04_mnist_mlp.py  05_mnist_cnn.py  06_decision_tree.py  07_random_forest.py  08_svm_classification.py  09_kmeans_clustering.py
include/greyarea/: ga_autograd.h  ga_cluster.h  ga_common.h  ga_io.h  ga_loss.h  ga_mem.h  ga_neighbors.h  ga_nn.h  ga_ops.h  ga_optim.h  ga_random.h  ga_simd.h  ga_svm.h  ga_tensor.h  ga_tree.h  greyarea.h
python/: pyproject.toml  setup.py
python/greyml/: __init__.py  _bindings.py  _lib_loader.py  autograd.py  ops.py  tensor.py
python/greyml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/greyml/data/: __init__.py  dataloader.py  dataset.py
python/greyml/ml/: __init__.py  forest.py  svm.py  tree.py
python/greyml/nn/: __init__.py  attention.py  container.py  dropout.py  init.py  layers.py  module.py  normalization.py  pooling.py  rnn.py
python/greyml/optim/: __init__.py  adam.py  scheduler.py  sgd.py
python/greyml/utils/: __init__.py  metrics.py
scripts/: build.bat  download_mnist.py  run_tests.bat
src/autograd/: ga_autograd.c  ga_autograd_ops.c  ga_graph.c
src/core/: ga_common.c  ga_mem.c  ga_random.c  ga_tensor.c  ga_tensor_print.c  ga_tensor_view.c
src/io/: ga_io_csv.c  ga_io_model.c  ga_io_tensor.c
src/loss/: ga_loss_ce.c  ga_loss_mse.c  ga_loss_other.c
src/ml/: ga_cluster_dbscan.c  ga_cluster_kmeans.c  ga_forest.c  ga_neighbors.c  ga_svm.c  ga_svm_kernel.c  ga_tree.c  ga_tree_split.c
src/nn/: ga_nn_attention.c  ga_nn_container.c  ga_nn_conv.c  ga_nn_dropout.c  ga_nn_embed.c  ga_nn_init.c  ga_nn_linear.c  ga_nn_norm.c  ga_nn_pool.c  ga_nn_rnn.c
src/ops/: ga_ops_activation.c  ga_ops_binary.c  ga_ops_blas.c  ga_ops_conv.c  ga_ops_matmul.c  ga_ops_reduce.c  ga_ops_transform.c  ga_ops_unary.c
src/optim/: ga_optim_adam.c  ga_optim_scheduler.c  ga_optim_sgd.c
src/simd/: ga_simd_avx.c  ga_simd_detect.c
tests/c/: test_autograd.c  test_cluster.c  test_io.c  test_main.c  test_mem.c  test_neighbors.c  test_nn.c  test_ops.c  test_svm.c  test_tensor.c  test_tree.c
tests/python/: __init__.py  conftest.py  test_autograd.py  test_bindings.py  test_data_utils.py  test_integration.py  test_io.py  test_io_rng.py  test_ml.py  test_ml_algorithms.py  test_nn.py  test_nn_layers.py  test_ops_extended.py  test_optim.py  test_plan.py  test_tensor.py  test_utils.py
