# GreyML config: pyproject.toml - packaging/build settings.
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greyml"
version = "0.1.0"
description = "GreyArea Labs AI Library (Python bindings)"
authors = [{name = "GreyArea Labs"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pytest>=7.0"]

[project.urls]
Homepage = "https://example.com/greyarea"
Repository = "https://example.com/greyarea/repo"
